--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@ nav ul li a:hover {
         "name": "PT. Mitsuba Indonesia"
     },
     "image": "https://www.example.com/regif.jpeg", 
-    "url": "https://www.example.com",
+    "url": "https://regiftyapp13.github.io/Tugas-Akhir-menampilkan-website-portofolio-pribadi-dengan-json-ld-jaringan-semantik/",
     "sameAs": [
         "https://www.facebook.com/RegiftyaRizkyPradanaPutra",
         "https://www.twitter.com/username",
